11月6日アップデート

--- a/Greater_East_Asia_CoProsperity_Sphere/localisation/replace/GEACPS_loading_tips_l_english.yml
+++ b/Greater_East_Asia_CoProsperity_Sphere/localisation/replace/GEACPS_loading_tips_l_english.yml
@@ -47,10 +47,10 @@
  LOADING_TIP_45: "賽は投げられた。\n- ガイウス・ユリウス・カエサル"
  LOADING_TIP_46: "怪しいところには、弾丸をぶち込め。\n- エルヴィン・ロンメル"
  LOADING_TIP_47: "落ち着け、そしてよく狙え。お前はこれから一人の男を殺すのだ。\n- エルネスト・ゲバラ"
- LOADING_TIP_48: "\n- "
- LOADING_TIP_49: "\n- "
- LOADING_TIP_50: "\n- "
- LOADING_TIP_51: "\n- "
+ LOADING_TIP_48: "大東亜の各国家及各民族をして、各々其の処を得しめ、帝国を核心とする道義に基く共存共栄の秩序を確立せんとするに在る。\n- 東條 英機"
+ LOADING_TIP_49: "「マライ」、「スマトラ」、「ジャワ」、「ボルネオ」、「セレベス」ハ帝国領土ト決定シ重要資源ノ供給源トシテ極力之ガ開発竝ニ民心ノ把握ニ努ム\n- 大東亜政略指導大綱"
+ LOADING_TIP_50: "大東亞共榮圏の建設は私の二十年来の持論であり又理想である。抑も之を實現せしむべく熱心に説いた者は日本人を母に持つ墺洪國貴族クーデンホーフカレルギー伯であつた。\n- 鹿島 守之助"
+ LOADING_TIP_51: "これは、まさに歴史的な偉業であった。…日本は白人のアジア侵略を止めるどころか、帝国主義、植民地主義、人類差別に終止符を打つことをなしとげた。\n- アーノルド・J・トインビー"
  LOADING_TIP_52: "\n- "
  LOADING_TIP_53: "\n- "
  LOADING_TIP_54: "\n- "
