American civilwar update

--- a/localisation/replace/USA_GEAPCS_USA_focus_l_english.yml
+++ b/localisation/replace/USA_GEAPCS_USA_focus_l_english.yml
@@ -1,115 +1,115 @@
 ﻿l_english: 
-USA_NctizHxU:0 "ソビエト連邦との提携"
-USA_NctizHxU_desc:0 ""
-USA_HbjGKdAV:0 "平等の連邦"
-USA_HbjGKdAV_desc:0 ""
-USA_zVDUeAMi:0 "議会の解体"
-USA_zVDUeAMi_desc:0 ""
-USA_WOkfahXL:0 "労働者共和国と提携"
-USA_WOkfahXL_desc:0 ""
-USA_MDmBsiUG:0 "白銀軍団と接触"
-USA_MDmBsiUG_desc:0 ""
-USA_GyjxXkwZ:0 "古の栄光"
-USA_GyjxXkwZ_desc:0 ""
-USA_HdWEpVwP:0 "奴隷法"
-USA_HdWEpVwP_desc:0 ""
-USA_rYQybwnF:0 "国家安定法"
-USA_rYQybwnF_desc:0 ""
-USA_gaoWzjmf:0 "私有財産制限法"
-USA_gaoWzjmf_desc:0 ""
-USA_VCQTtHBo:0 "国家治安維持法"
-USA_VCQTtHBo_desc:0 ""
-USA_lFZjsQVy:0 "徹底抗戦"
-USA_lFZjsQVy_desc:0 ""
-USA_NFAaSUMb:0 "アメリカ連合帝国"
-USA_NFAaSUMb_desc:0 ""
-USA_WlpuewIX:0 "連邦政府の復古"
-USA_WlpuewIX_desc:0 ""
-USA_uiUKCSJl:0 "アメリカ人民連邦"
-USA_uiUKCSJl_desc:0 ""
+USA_RzfSOMPY:0 "ソビエト連邦との提携"
+USA_RzfSOMPY_desc:0 ""
+USA_iCOZdoTN:0 "平等の連邦"
+USA_iCOZdoTN_desc:0 ""
+USA_aOdgBkCb:0 "議会の解体"
+USA_aOdgBkCb_desc:0 ""
+USA_ZiFJnaVc:0 "労働者共和国と提携"
+USA_ZiFJnaVc_desc:0 ""
+USA_LSqTznfR:0 "白銀軍団と接触"
+USA_LSqTznfR_desc:0 ""
+USA_eUfDPzoQ:0 "古の栄光"
+USA_eUfDPzoQ_desc:0 ""
+USA_wVTISvsj:0 "奴隷法"
+USA_wVTISvsj_desc:0 ""
+USA_WjKwouzY:0 "国家安定法"
+USA_WjKwouzY_desc:0 ""
+USA_HwiLlkhA:0 "私有財産制限法"
+USA_HwiLlkhA_desc:0 ""
+USA_VXGNnzZu:0 "国家治安維持法"
+USA_VXGNnzZu_desc:0 ""
+USA_dqepoyit:0 "徹底抗戦"
+USA_dqepoyit_desc:0 ""
+USA_lGJhqKPf:0 "アメリカ連合帝国"
+USA_lGJhqKPf_desc:0 ""
+USA_NlbRYUEd:0 "連邦政府の復古"
+USA_NlbRYUEd_desc:0 ""
+USA_HFazQAIW:0 "アメリカ人民連邦"
+USA_HFazQAIW_desc:0 ""
 USA_1947:0 "1947年臨時大統領選挙"
 USA_1947_desc:0 ""
-USA_sFfoULiM:0 "強靭な政府"
-USA_sFfoULiM_desc:0 ""
-USA_WTDVFCaN:0 "革命の炎"
-USA_WTDVFCaN_desc:0 ""
-USA_HcGMBjdZ:0 "民族主義者を弾圧"
-USA_HcGMBjdZ_desc:0 ""
-USA_TbHKwzvm:0 "シカゴ会議"
-USA_TbHKwzvm_desc:0 ""
-USA_CQRkXGTS:0 "軍事経済の推進"
-USA_CQRkXGTS_desc:0 ""
-USA_sMoOLqkt:0 "国立大学への支援"
-USA_sMoOLqkt_desc:0 ""
-USA_eMUGiTCo:0 "国家経済管理局の設立"
-USA_eMUGiTCo_desc:0 ""
-USA_mxiFtekr:0 "大陸縦断鉄道の建設"
-USA_mxiFtekr_desc:0 ""
+USA_OejvawPQ:0 "強靭な政府"
+USA_OejvawPQ_desc:0 ""
+USA_bvKoadnG:0 "革命の炎"
+USA_bvKoadnG_desc:0 ""
+USA_CXJziVhT:0 "民族主義者を弾圧"
+USA_CXJziVhT_desc:0 ""
+USA_qghYIBjD:0 "シカゴ会議"
+USA_qghYIBjD_desc:0 ""
+USA_kLlSBnbI:0 "軍事経済の推進"
+USA_kLlSBnbI_desc:0 ""
+USA_BMSapuJg:0 "国立大学への支援"
+USA_BMSapuJg_desc:0 ""
+USA_vtGlJneA:0 "国家経済管理局の設立"
+USA_vtGlJneA_desc:0 ""
+USA_uDsnFOVY:0 "大陸縦断鉄道の建設"
+USA_uDsnFOVY_desc:0 ""
 USA_ii:0 "大陸縦断鉄道の建設II"
 USA_ii_desc:0 ""
 USA_iii:0 "大陸縦断鉄道の建設III"
 USA_iii_desc:0 ""
-USA_cIgJWRzs:0 "軍事中心経済"
-USA_cIgJWRzs_desc:0 ""
-USA_CXxWMvsS:0 "民間経済の復興"
-USA_CXxWMvsS_desc:0 ""
-USA_tseSwWMH:0 "国債の大量発行を開始"
-USA_tseSwWMH_desc:0 ""
-USA_ZKHvXNJm:0 "外国企業の資産を押収"
-USA_ZKHvXNJm_desc:0 ""
-USA_xgaBCFEn:0 "ベーシックインカム"
-USA_xgaBCFEn_desc:0 ""
-USA_nBtVNFJA:0 "第三次インディアン移住法"
-USA_nBtVNFJA_desc:0 ""
-USA_iJtYFpqa:0 "インディアン特例法"
-USA_iJtYFpqa_desc:0 ""
-USA_yhgjwvVU:0 "株式市場の２４時間運用"
-USA_yhgjwvVU_desc:0 ""
-USA_FstESrgO:0 "ワシントンを復興"
-USA_FstESrgO_desc:0 ""
-USA_vOSHbgwY:0 "資源管理法"
-USA_vOSHbgwY_desc:0 ""
-USA_RzUBKhdw:0 "教育投資"
-USA_RzUBKhdw_desc:0 ""
-USA_SPUTEtHe:0 "新首都"
-USA_SPUTEtHe_desc:0 ""
-USA_AHxvplaq:0 "建築設計を共通化"
-USA_AHxvplaq_desc:0 ""
-USA_ZHsymzeF:0 "整備された町並み"
-USA_ZHsymzeF_desc:0 ""
-USA_ELiMxlYh:0 "投資家を歓迎"
-USA_ELiMxlYh_desc:0 ""
-USA_RGEpLSdO:0 "復興庁を設立"
-USA_RGEpLSdO_desc:0 ""
-USA_YuByMsNh:0 "世界の工場"
-USA_YuByMsNh_desc:0 ""
-USA_fBySkzYF:0 "奨学金制度の拡充"
-USA_fBySkzYF_desc:0 ""
-USA_UTvoSXqh:0 "失地の回復"
-USA_UTvoSXqh_desc:0 ""
-USA_hsrImAju:0 "大粛清"
-USA_hsrImAju_desc:0 ""
-USA_ZTMAuPQB:0 "シカゴ会議"
-USA_ZTMAuPQB_desc:0 ""
-USA_thwyxcPM:0 "テキサス併合"
-USA_thwyxcPM_desc:0 ""
-USA_jeQtAfnz:0 "武力行使"
-USA_jeQtAfnz_desc:0 ""
-USA_dkNjfoGl:0 "アメリカ再統一"
-USA_dkNjfoGl_desc:0 ""
-USA_wPogXQxO:0 "主権を尊重"
-USA_wPogXQxO_desc:0 ""
-USA_JnEoUWMH:0 "一つの国家"
-USA_JnEoUWMH_desc:0 ""
-USA_ZXbtCRVU:0 "全体主義を禁止"
-USA_ZXbtCRVU_desc:0 ""
-USA_QCeEVcdJ:0 "外交的解決"
-USA_QCeEVcdJ_desc:0 ""
-USA_SJdYQmgE:0 "軍事侵攻"
-USA_SJdYQmgE_desc:0 ""
-USA_nOHjgAYD:0 "コミンフォルムへ加盟"
-USA_nOHjgAYD_desc:0 ""
-USA_bHUuwqsc:0 "第５インターナショナル"
-USA_bHUuwqsc_desc:0 ""
-USA_fuzaMZVD:0 "革命を伝搬"
-USA_fuzaMZVD_desc:0 ""
+USA_FxbWLAsD:0 "軍事中心経済"
+USA_FxbWLAsD_desc:0 ""
+USA_kdobhHcX:0 "民間経済の復興"
+USA_kdobhHcX_desc:0 ""
+USA_MVuUBvEG:0 "国債の大量発行を開始"
+USA_MVuUBvEG_desc:0 ""
+USA_EWpSHFkf:0 "外国企業の資産を押収"
+USA_EWpSHFkf_desc:0 ""
+USA_gICLJrTX:0 "ベーシックインカム"
+USA_gICLJrTX_desc:0 ""
+USA_WtVDwAKF:0 "第三次インディアン移住法"
+USA_WtVDwAKF_desc:0 ""
+USA_GgPXYAsS:0 "インディアン特例法"
+USA_GgPXYAsS_desc:0 ""
+USA_QogwtczN:0 "株式市場の２４時間運用"
+USA_QogwtczN_desc:0 ""
+USA_whWHNDpP:0 "ワシントンを復興"
+USA_whWHNDpP_desc:0 ""
+USA_lAsKGdju:0 "資源管理法"
+USA_lAsKGdju_desc:0 ""
+USA_YPTdZslq:0 "教育投資"
+USA_YPTdZslq_desc:0 ""
+USA_eAJWbFoY:0 "新首都"
+USA_eAJWbFoY_desc:0 ""
+USA_HBkscPVe:0 "建築設計を共通化"
+USA_HBkscPVe_desc:0 ""
+USA_egSTWAkZ:0 "整備された町並み"
+USA_egSTWAkZ_desc:0 ""
+USA_tCmWAGjr:0 "投資家を歓迎"
+USA_tCmWAGjr_desc:0 ""
+USA_soDGTdxH:0 "復興庁を設立"
+USA_soDGTdxH_desc:0 ""
+USA_xBeNSKzy:0 "世界の工場"
+USA_xBeNSKzy_desc:0 ""
+USA_rmOLVhsT:0 "奨学金制度の拡充"
+USA_rmOLVhsT_desc:0 ""
+USA_BNbXTelt:0 "失地の回復"
+USA_BNbXTelt_desc:0 ""
+USA_AVHdgrxK:0 "大粛清"
+USA_AVHdgrxK_desc:0 ""
+USA_RYMgqcDw:0 "シカゴ会議"
+USA_RYMgqcDw_desc:0 ""
+USA_GiSLDczq:0 "テキサス併合"
+USA_GiSLDczq_desc:0 ""
+USA_LoESXhPw:0 "武力行使"
+USA_LoESXhPw_desc:0 ""
+USA_gQWFIwAe:0 "アメリカ再統一"
+USA_gQWFIwAe_desc:0 ""
+USA_jHMIRUch:0 "主権を尊重"
+USA_jHMIRUch_desc:0 ""
+USA_xwvVsjQr:0 "一つの国家"
+USA_xwvVsjQr_desc:0 ""
+USA_dBtzPlbC:0 "全体主義を禁止"
+USA_dBtzPlbC_desc:0 ""
+USA_nlILtqwR:0 "外交的解決"
+USA_nlILtqwR_desc:0 ""
+USA_SVhaecyr:0 "軍事侵攻"
+USA_SVhaecyr_desc:0 ""
+USA_SFUGjfsr:0 "コミンフォルムへ加盟"
+USA_SFUGjfsr_desc:0 ""
+USA_LXbpviJl:0 "第５インターナショナル"
+USA_LXbpviJl_desc:0 ""
+USA_LfkhOsvV:0 "革命を伝搬"
+USA_LfkhOsvV_desc:0 ""
