アップデート

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -71,8 +71,8 @@
  RAJ_DEF:0 "インド帝国"
  RAJ_ADJ:0 "インド"
  
- WGR:0 "ドイツ帝国"
- WGR_DEF:0 "ドイツ帝国"
+ WGR:0 "ドイツ連邦共和国"
+ WGR_DEF:0 "ドイツ連邦共和国"
  WGR_ADJ:0 "西ドイツ"
  
  SRD:0 "サルディーニャ王国"
@@ -145,11 +145,11 @@
  BUL_total_socialism_DEF:0 "ブルガリア人民共和国"
  BUL_ADJ:0 "ブルガリア"
  
- CZE:0 "チェコ共和国"
- CZE_DEF:0 "チェコ共和国"
- CZE_total_socialism:0 "チェコ社会主義共和国"
- CZE_total_socialism_DEF:0 "チェコ社会主義共和国"
- CZE_ADJ:0 "チェコ"
+ CZE:0 "チェコスロバキア共和国"
+ CZE_DEF:0 "チェコスロバキア共和国"
+ CZE_total_socialism:0 "チェコスロバキア社会主義共和国"
+ CZE_total_socialism_DEF:0 "チェコスロバキア社会主義共和国"
+ CZE_ADJ:0 "チェコスロバキア"
  
  DDR:0 "ドイツ民主共和国"
  DDR_DEF:0 "ドイツ民主共和国"
@@ -364,6 +364,10 @@
  NOR:0 "ノルウェー王国"
  NOR_DEF:0 "ノルウェー王国"
  NOR_ADJ:0 "ノルウェー"
+ 
+ SGC:0 "南ドイツ連合共和国"
+ SGC_DEF:0 "南ドイツ連合共和国"
+ SGC_ADJ:0 "南ドイツ連合"
  
  SIC:0 "両シチリア王国"
  SIC_DEF:0 "両シチリア王国"
