州の整理とバグ修正(2回目)

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -1,4 +1,8 @@
 ﻿l_english:
+ STATE_439:0 "ハリヤーナー"
+ STATE_442:0 "カイバル・パクトゥンクワ"
+ STATE_444:0 "バローチスターン"
+ STATE_445:0 "バダフシャーン"
  STATE_629:0 "布哇" #ハワイ
  STATE_631:0 "水無月島" #ミッドウェー島
  STATE_632:0 "大鳥島" #ウェーク島
@@ -6,4 +10,6 @@
  STATE_646:0 "彩帆" #サイパン
  STATE_650:0 "熱田島" #アッツ島
  STATE_655:0 "北樺太" #北サハリン
+ STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
+ STATE_1021:0 "アザド・カシミール"
