--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ STATE_357:0 "メイン"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
  STATE_444:0 "バローチスターン"
@@ -14,3 +15,8 @@
  STATE_797:0 "東京"
  STATE_1021:0 "アザド・カシミール"
  STATE_1022:0 "ウェストバージニア"
+ STATE_1023:0 "バーモント"
+ STATE_1024:0 "ニューハンプシャー"
+ STATE_1025:0 "マサチューセッツ"
+ STATE_1026:0 "ロードアイランド"
+ STATE_1027:0 "コネチカット"
