国家ファイル、州ファイル及び供給エリアの編集

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ STATE_77:0 "南ドブロジャ"
  STATE_357:0 "メイン"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
@@ -20,3 +21,5 @@
  STATE_1025:0 "マサチューセッツ"
  STATE_1026:0 "ロードアイランド"
  STATE_1027:0 "コネチカット"
+ STATE_1028:0 "モンタナ"
+ STATE_1029:0 "ハスコヴォ"
