--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -129,6 +129,8 @@
  
  BUL:0 "ブルガリア共和国"
  BUL_DEF:0 "ブルガリア共和国"
+ BUL_total_socialism:0 "ブルガリア人民共和国"
+ BUL_total_socialism_DEF:0 "ブルガリア人民共和国"
  BUL_ADJ:0 "ブルガリア"
  
  CZE:0 "チェコ共和国"
@@ -141,14 +143,20 @@
  
  HUN:0 "ハンガリー"
  HUN_DEF:0 "ハンガリー"
+ HUN_total_socialism:0 "ハンガリー人民共和国"
+ HUN_total_socialism_DEF:0 "ハンガリー人民共和国"
  HUN_ADJ:0 "ハンガリー"
  
  POL:0 "ポーランド共和国"
  POL_DEF:0 "ポーランド共和国"
+ POL_total_socialism:0 "ポーランド人民共和国"
+ POL_total_socialism_DEF:0 "ポーランド人民共和国"
  POL_ADJ:0 "ポーランド"
  
  ROM:0 "ルーマニア"
  ROM_DEF:0 "ルーマニア"
+ ROM_total_socialism:0 "ルーマニア社会主義共和国"
+ ROM_total_socialism_DEF:0 "ルーマニア社会主義共和国"
  ROM_ADJ:0 "ルーマニア"
  
 #中華諸国
