--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -100,6 +100,8 @@
  FRA_reactionary_authoritarianism_party:0 "アクション・フランセーズ"
  FRA_national_populism_party:0 "フランス人民連合"
  
+ SGR_liberal_conservatism_party:0 "ドイツキリスト教民主同盟"
+ 
  ITA_total_socialism_party:0 "イタリア共産党"
  ITA_radical_socialism_party:0 "イタリア社会党"
  ITA_social_democracy_party:0 "労働民主党"
@@ -112,7 +114,7 @@
  ITA_national_populism_party:0 "イタリア社会運動"
  
 #コミンフォルム
- RUS_total_socialism_party:0 "ソビエト連邦共産党"
+ RUS_total_socialism_party:0 "全連邦共産党 (ボリシェヴィキ)"
  RUS_radical_socialism_party:0 "社会革命党"
  RUS_social_democracy_party:0 "ロシア社会民主労働党"
  RUS_social_liberalism_party:0 "立憲民主党ミリュコーフ派"
@@ -122,6 +124,10 @@
  RUS_authoritative_democracy_party:0 "立憲民主党"
  RUS_reactionary_authoritarianism_party:0 "10月17日同盟"
  RUS_national_populism_party:0 "ロシアファシスト党"
+ 
+ BLR_SOV_total_socialism_party:0 "白ロシア共産党"
+ 
+ ALB_total_socialism_party:0 "アルバニア労働者党"
  
  BUL_total_socialism_party:0 "ブルガリア共産党"
  BUL_radical_socialism_party:0 "内部マケドニア革命組織"
@@ -224,6 +230,8 @@
  TWS_authoritative_democracy_party:0 "コサック党"
  
 #ヨーロッパ
+ BEL_social_democracy_party:0 "ベルギー社会党"
+ 
  SWE_total_socialism_party:0 "共産党"
  SWE_radical_socialism_party:0 "社会党"
  SWE_social_democracy_party:0 "スウェーデン社会民主労働党"
@@ -258,6 +266,8 @@
  PDG_national_populism_party:0 "団体X"
  
 #新大陸
+ CHL_social_liberalism_party:0 "急進党"
+ 
  USA_total_socialism_party:0 "アメリカ共産党"
  USA_radical_socialism_party:0 "進歩党"
  USA_social_democracy_party:0 "アメリカ社会党"
@@ -273,12 +283,7 @@
 #アジア
  
 #ヨーロッパ
- SOV_communism_party:0 "ソビエト連邦共産党"
- SOV_democratic_party:0 "10月17日同盟"
- SOV_fascism_party:0 "ロシアファシスト党"
- SOV_neutrality_party:0 "ロマノフ朝"
  
 #新大陸
- CHL_social_liberalism_party:0 "急進党"
  
 #太平洋
