--- a/localisation/replace/parliament_gui_l_english.yml
+++ b/localisation/replace/parliament_gui_l_english.yml
@@ -1,18 +1,17 @@
 ﻿l_english:
-
  # Decisions
-  parliament_gui_decision_category:0 "Parliament GUI Examples§!"
-  parliament_gui_decision_category_desc:0 "placeholder text\nplaceholder text\nplaceholder text"
+  parliament_gui_decision_category:0 "議会GUIの例§!"
+  parliament_gui_decision_category_desc:0 "仮テキスト\n仮テキスト\n仮テキスト"
 
  # Scripted GUIs
-  parliament_gui_title:0 "Grid Parliament"
-  semicircle_parliament_gui_title:0 "Semicircle Parliament"
+  parliament_gui_title:0 "議会(格子状)"
+  semicircle_parliament_gui_title:0 "議会(半円状)"
   parliament_main_icon_tt:0 "[GetParliamentSeatName] - [GetParliamentPartyName]"
-  parliament_seat_text:0 "Seat [?temp_seat|Y0]"
+  parliament_seat_text:0 "[?temp_seat|Y0]席"
   parliament_member_text:0 "[GetParliamentPartyName] - [?parliament_seat_array^parliament_member_index] Seats"
   parliament_modify_button_tt:0 "§GCtrl+Click§! to add §Y5§! Seats from [GetParliamentPartyName]\n§GShift+Click§! to subtract §Y5§! Seats from [GetParliamentPartyName]"
 
-  party_1_text:0 "Party §RA§!"
-  party_2_text:0 "Party §YB§!"
-  party_3_text:0 "Party §GC§!"
-  party_4_text:0 "Party §BD§!"
+  party_1_text:0 "§RA§!政党"
+  party_2_text:0 "§YB§!政党"
+  party_3_text:0 "§GC§!政党"
+  party_4_text:0 "§BD§!政党"
