エラー除去2

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -548,9 +548,9 @@
  TEX_DEF:0 "テキサス共和国"
  TEX_ADJ:0 "テキサス"
  
- WAS:0 "ワシントン連盟"
- WAS_DEF:0 "ワシントン連盟"
- WAS_ADJ:0 "ワシントン"
+ CLU:0 "ワシントン・コロンビア連盟"
+ CLU_DEF:0 "ワシントン・コロンビア連盟"
+ CLU_ADJ:0 "ワシントン・コロンビア"
  
 ##未使用
 #アジア
