--- a/localisation/geacps_FRA_l_english.yml
+++ b/localisation/geacps_FRA_l_english.yml
@@ -54,7 +54,7 @@
  FRA_rebellion_africa:0 "植民地での反乱"
  FRA_future_industry:0 "産業の将来"
  FRA_Private_initiative:0 "民間主導"
- FRA_National_initiative:0 "国家主導"
+ FRA_National_initiative1:0 "国家主導"
  FRA_Nationalization:0 "ルノー社の国営化"
  FRA_support_renault:0 "ルノー社を支援"
  FRA_support_smaller_companies:0 "中小企業を支援"
