国家の追加とグレートブリテン島の州の史実化

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -1,5 +1,16 @@
 ﻿l_english:
  STATE_77:0 "南ドブロジャ"
+ STATE_120:0 "高地と島々"
+ STATE_121:0 "イースト・スコットランド"
+ STATE_123:0 "サウス・ウェスト・イングランド"
+ STATE_125:0 "イースト・オブ・イングランド"
+ STATE_126:0 "カンブリア"
+ STATE_127:0 "サウス・イースト・イングランド"
+ STATE_130:0 "ヨークシャー・アンド・ザ・ハンバー"
+ STATE_131:0 "ノース・イースト・イングランド"
+ STATE_132:0 "ノース・ウェスト・イングランド"
+ STATE_133:0 "サウス・ウェスト・スコットランド"
+ STATE_136:0 "ノース・イースト・スコットランド"
  STATE_357:0 "メイン"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
