国家の色の変更及び指導者画像の追加

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -26,9 +26,9 @@
  PAP_DEF:0 "教皇領"
  PAP_ADJ:0 "教皇領"
  
- Arab:0 "アラブ連邦共和国"
- Arab_DEF:0 "アラブ連邦共和国"
- Arab_ADJ:0 "アラブ"
+ GRE_republic_provisional:0 "ギリシャ臨時民主政府"
+ GRE_republic_provisional_DEF:0 "ギリシャ臨時民主政府"
+ GRE_republic_provisional_ADJ:0 "臨時民主政府"
  
 #中華民国政府
  CHI_provisional_government:0 "中華民国臨時政府"
