東南アジアのアップデート

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -11,6 +11,7 @@
  STATE_132:0 "ノース・ウェスト・イングランド"
  STATE_133:0 "サウス・ウェスト・スコットランド"
  STATE_136:0 "ノース・イースト・スコットランド"
+ STATE_286:0 "南中部"
  STATE_357:0 "メイン"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
@@ -23,6 +24,7 @@
  STATE_646:0 "彩帆" #サイパン
  STATE_650:0 "熱田島" #アッツ島
  STATE_655:0 "北樺太" #北サハリン
+ STATE_671:0 "北中部"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
  STATE_1021:0 "アザド・カシミール"
@@ -36,3 +38,7 @@
  STATE_1029:0 "ハスコヴォ"
  STATE_1030:0 "キャバン"
  STATE_1031:0 "ドニゴール"
+ STATE_1032:0 "西北部"
+ STATE_1033:0 "紅河デルタ"
+ STATE_1034:0 "東南部"
+ STATE_1035:0 "中部高原"
