ヘリコプターのタブ作成
中身はありません

--- a/localisation/replace/AT_l_english.yml
+++ b/localisation/replace/AT_l_english.yml
@@ -1,4 +1,8 @@
 ﻿l_english:
+#tab
+ helicopter_folder:0 "ヘリコプター"
+ helicopter_folder_desc:0 "ヘリコプターとは、なんかぐるぐるして飛ぶやつである。"
+
 # category_bomber:0 "戦術爆撃機"
  category_cv:0 "艦載機"
  AIR_TITLE_CV_FIGHTER:0 "艦上戦闘機"
@@ -9,6 +13,7 @@
  AIR_TITLE_CV_JET_ATTACKER:0 "ジェット\n艦上攻撃機"
  AIR_TITLE_JET_MEDIUM_BOMBER:0 "ジェット戦術爆撃機"
  AIR_TITLE_JET_STRAT_BOMBER:0 "ジェット\n戦略爆撃機"
+ HERICOPTER:0 "ヘリコプター"
  interwar_antiair:0 "対空砲"
  NAVAL_TITLE_LIGHT_CARRIERS:0 "軽空母"
  light_carrier_1:0 "軽空母 I"
