ポーランド、ベラルーシ、ウクライナの州と戦略地域と補給地域の史実化及び整理、修正第一弾

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -1,5 +1,22 @@
 ﻿l_english:
+ STATE_5:0 "ヴァルミア＝マズールィ"
+ STATE_63:0 "ポメラニア"
+ STATE_66:0 "ドルヌィ・シロンスク"
+ STATE_67:0 "オポーレ"
+ STATE_68:0 "ルブシュ"
+ STATE_73:0 "ザカルパッチャ"
  STATE_77:0 "南ドブロジャ"
+ STATE_80:0 "チェルニウツィー"
+ STATE_85:0 "ポモージェ"
+ STATE_86:0 "ポズナン"
+ STATE_87:0 "ウッチ"
+ STATE_89:0 "イヴァーノ＝フランキーウシク"
+ STATE_91:0 "リヴィウ"
+ STATE_93:0 "ヴォルィーニ"
+ STATE_94:0 "ブレスト"
+ STATE_95:0 "フロドナ"
+ STATE_96:0 "キエフ市"
+ STATE_98:0 "グダニスク"
  STATE_120:0 "高地と島々"
  STATE_121:0 "イースト・スコットランド"
  STATE_123:0 "サウス・ウェスト・イングランド"
@@ -11,6 +28,18 @@
  STATE_132:0 "ノース・ウェスト・イングランド"
  STATE_133:0 "サウス・ウェスト・スコットランド"
  STATE_136:0 "ノース・イースト・スコットランド"
+ STATE_193:0 "チェルニーヒウ"
+ STATE_194:0 "ホメリ"
+ STATE_199:0 "フメリニツキー"
+ STATE_200:0 "ザポリージャ"
+ STATE_201:0 "ジトーミル"
+ STATE_204:0 "ミンスク"
+ STATE_206:0 "ミンスク市"
+ STATE_207:0 "ヴィーツェプスク"
+ STATE_221:0 "ハルキウ"
+ STATE_227:0 "ドネツィク"
+ STATE_228:0 "ルハーンシク"
+ STATE_241:0 "マヒリョウ"
  STATE_286:0 "南中部"
  STATE_357:0 "メイン"
  STATE_439:0 "ハリヤーナー"
@@ -25,6 +54,7 @@
  STATE_650:0 "熱田島" #アッツ島
  STATE_655:0 "北樺太" #北サハリン
  STATE_671:0 "北中部"
+ STATE_766:0 "ブジャク"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
  STATE_1021:0 "アザド・カシミール"
@@ -42,3 +72,8 @@
  STATE_1033:0 "紅河デルタ"
  STATE_1034:0 "東南部"
  STATE_1035:0 "中部高原"
+ STATE_1036:0 "テルノーピリ"
+ STATE_1037:0 "キロヴォフラード"
+ STATE_1038:0 "リウネ"
+ STATE_1039:0 "シロンスク"
+ STATE_1040:0 "メゼリッツ"
