終わり、閉廷！(多分)

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -57,6 +57,7 @@
  STATE_766:0 "ブジャク"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
+ STATE_990:0 "モスクワ市"
  STATE_1021:0 "アザド・カシミール"
  STATE_1022:0 "ウェストバージニア"
  STATE_1023:0 "バーモント"
