--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -168,13 +168,17 @@
  RAJ_ENG-GBR_ADJ:0 "英領インド"
  
 #フランス
- SAR_FRA_:0 "フランス保護領ザール"
- SAR_FRA__DEF:0 "フランス保護領ザール"
+ SAR_FRA:0 "フランス保護領ザール"
+ SAR_FRA_DEF:0 "フランス保護領ザール"
  SAR_FRA_ADJ:0 "仏領ザール"
  
  RHI_FRA:0 "フランス保護領ライン"
  RHI_FRA_DEF:0 "フランス保護領ライン"
  RHI_FRA_ADJ:0 "仏領ライン"
+ 
+ VAL_FRA:0 "フランス保護領ヴァッレ・ダオスタ"
+ VAL_FRA_DEF:0 "フランス保護領ヴァッレ・ダオスタ"
+ VAL_FRA_ADJ:0 "仏領ヴァッレ・ダオスタ"
  
 #中華
  MEN_CHI:0 "蒙古自治邦政府"
