--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -78,6 +78,10 @@
  RHI_DEF:0 "ラインラント共和国"
  RHI_ADJ:0 "ラインラント"
  
+ VAL:0 "ヴァッレ・ダオスタ共和国"
+ VAL_DEF:0 "ヴァッレ・ダオスタ共和国"
+ VAL_ADJ:0 "ヴァッレ・ダオスタ"
+ 
  SGR:0 "ドイツ連邦共和国"
  SGR_DEF:0 "ドイツ連邦共和国"
  SGR_ADJ:0 "南ドイツ"
