ウクライナ君迫真の拡大
そのまんま

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -36,10 +36,14 @@
  STATE_204:0 "ミンスク"
  STATE_206:0 "ミンスク市"
  STATE_207:0 "ヴィーツェプスク"
+ STATE_219:0 "モスクワ"
  STATE_221:0 "ハルキウ"
  STATE_227:0 "ドネツィク"
  STATE_228:0 "ルハーンシク"
+ STATE_237:0 "カルムイク"
+ STATE_238:0 "ボルゴドンスク"
  STATE_241:0 "マヒリョウ"
+ STATE_245:0 "ミルレロヴォ"
  STATE_286:0 "南中部"
  STATE_357:0 "メイン"
  STATE_439:0 "ハリヤーナー"
@@ -78,3 +82,6 @@
  STATE_1038:0 "リウネ"
  STATE_1039:0 "シロンスク"
  STATE_1040:0 "メゼリッツ"
+ STATE_1041:0 "ズナメンスク"
+ STATE_1042:0 "アゾフ"
+ STATE_1043:0 "カガリニツカヤ"
