--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -40,6 +40,7 @@
  STATE_221:0 "ハルキウ"
  STATE_227:0 "ドネツィク"
  STATE_228:0 "ルハーンシク"
+ STATE_232:0 "ダゲスタン"
  STATE_237:0 "カルムイク"
  STATE_238:0 "ボルゴドンスク"
  STATE_241:0 "マヒリョウ"
