ロシアのアキレス腱
少しエラーが増えてしまった事を深くお詫び申し上げます。

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -28,14 +28,20 @@
  STATE_132:0 "ノース・ウェスト・イングランド"
  STATE_133:0 "サウス・ウェスト・スコットランド"
  STATE_136:0 "ノース・イースト・スコットランド"
+ STATE_146:0 "レニングラード"
+ STATE_147:0 "サラ"
  STATE_193:0 "チェルニーヒウ"
  STATE_194:0 "ホメリ"
+ STATE_195:0 "レニングラード市"
  STATE_199:0 "フメリニツキー"
  STATE_200:0 "ザポリージャ"
  STATE_201:0 "ジトーミル"
  STATE_204:0 "ミンスク"
  STATE_206:0 "ミンスク市"
  STATE_207:0 "ヴィーツェプスク"
+ STATE_215:0 "白海カレリア"
+ STATE_216:0 "オロネツ・カレリア"
+ STATE_217:0 "コテリニコヴォ"
  STATE_219:0 "モスクワ"
  STATE_221:0 "ハルキウ"
  STATE_227:0 "ドネツィク"
@@ -59,6 +65,7 @@
  STATE_650:0 "熱田島" #アッツ島
  STATE_655:0 "北樺太" #北サハリン
  STATE_671:0 "北中部"
+ STATE_722:0 "ペチェンガ"
  STATE_766:0 "ブジャク"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
@@ -88,3 +95,6 @@
  STATE_1043:0 "カガリニツカヤ"
  STATE_1044:0 "スロヴィキノ"
  STATE_1045:0 "パルラソフカ"
+ STATE_1046:0 "ラドガ・カレリア"
+ STATE_1047:0 "カレリア地峡"
+ STATE_1048:0 "スターリングラード"
