--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -117,6 +117,10 @@
  BLR_SOV_DEF:0 "白ロシア・ソビエト社会主義共和国"
  BLR_SOV_ADJ:0 "白ロシア・ソビエト"
  
+ DON_SOV:0 "ドン・ソビエト社会主義共和国"
+ DON_SOV_DEF:0 "ドン・ソビエト社会主義共和国"
+ DON_SOV_ADJ:0 "ドン・ソビエト"
+ 
  EST_SOV:0 "エストニア・ソビエト社会主義共和国"
  EST_SOV_DEF:0 "エストニア・ソビエト社会主義共和国"
  EST_SOV_ADJ:0 "エストニア・ソビエト"
