--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -103,6 +103,10 @@
  BLR_DEF:0 "ベラルーシ共和国"
  BLR_ADJ:0 "ベラルーシ"
  
+ DON:0 "ドン共和国"
+ DON_DEF:0 "ドン共和国"
+ DON_ADJ:0 "ドン"
+ 
  EST:0 "エストニア共和国"
  EST_DEF:0 "エストニア共和国"
  EST_ADJ:0 "エストニア"
