--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -28,7 +28,7 @@
  STATE_132:0 "ノース・ウェスト・イングランド"
  STATE_133:0 "サウス・ウェスト・スコットランド"
  STATE_136:0 "ノース・イースト・スコットランド"
- STATE_146:0 "レニングラード"
+ STATE_146:0 "フセヴォロジスク"
  STATE_147:0 "サラ"
  STATE_193:0 "チェルニーヒウ"
  STATE_194:0 "ホメリ"
@@ -39,6 +39,8 @@
  STATE_204:0 "ミンスク"
  STATE_206:0 "ミンスク市"
  STATE_207:0 "ヴィーツェプスク"
+ STATE_208:0 "キンギセップ"
+ STATE_210:0 "ヴェリーキエ・ルーキ"
  STATE_215:0 "白海カレリア"
  STATE_216:0 "オロネツ・カレリア"
  STATE_217:0 "コテリニコヴォ"
@@ -50,7 +52,12 @@
  STATE_237:0 "カルムイク"
  STATE_238:0 "ボルゴドンスク"
  STATE_241:0 "マヒリョウ"
+ STATE_242:0 "ヴャジマ"
+ STATE_243:0 "スモレンスク"
+ STATE_244:0 "ポルッカラ"
  STATE_245:0 "ミルレロヴォ"
+ STATE_247:0 "トヴェリ"
+ STATE_264:0 "チフヴィン"
  STATE_286:0 "南中部"
  STATE_357:0 "メイン"
  STATE_439:0 "ハリヤーナー"
