--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -105,3 +105,11 @@
  STATE_1046:0 "ラドガ・カレリア"
  STATE_1047:0 "カレリア地峡"
  STATE_1048:0 "スターリングラード"
+ STATE_1049:0 "ヴラジーミル"
+ STATE_1050:0 "モルドヴィア"
+ STATE_1051:0 "シズラニ"
+ STATE_1052:0 "ディミトロフグラード"
+ STATE_1053:0 "ブインスク"
+ STATE_1054:0 "チュヴァシ"
+ STATE_1055:0 "ヴェトルジュスキー"
+ STATE_1056:0 "コストロマ"
