バルト三国
バトル三国(迫真)

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  STATE_5:0 "ヴァルミア＝マズールィ"
+ STATE_11:0 "アウクシュタイティヤ"
+ STATE_13:0 "サーレマー島"
  STATE_63:0 "ポメラニア"
  STATE_66:0 "ドルヌィ・シロンスク"
  STATE_67:0 "オポーレ"
@@ -30,6 +32,8 @@
  STATE_136:0 "ノース・イースト・スコットランド"
  STATE_146:0 "フセヴォロジスク"
  STATE_147:0 "サラ"
+ STATE_189:0 "小リトアニア"
+ STATE_189:0 "ジェマイティヤ"
  STATE_193:0 "チェルニーヒウ"
  STATE_194:0 "ホメリ"
  STATE_195:0 "レニングラード市"
@@ -74,6 +78,7 @@
  STATE_671:0 "北中部"
  STATE_722:0 "ペチェンガ"
  STATE_766:0 "ブジャク"
+ STATE_784:0 "ズーキヤ"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
  STATE_990:0 "モスクワ市"
@@ -113,3 +118,5 @@
  STATE_1054:0 "チュヴァシ"
  STATE_1055:0 "ヴェトルジュスキー"
  STATE_1056:0 "コストロマ"
+ STATE_1057:0 "ラトガレ"
+ STATE_1058:0 "スヴァルキヤ"
