--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -754,6 +754,10 @@
  INC_DEF:0 "インドシナ連合"
  INC_ADJ:0 "インドシナ"
  
+ SIN:0 "シンガポール共和国"
+ SIN_DEF:0 "シンガポール共和国"
+ SIN_ADJ:0 "シンガポール"
+ 
  KUR:0 "クルディスタン王国"
  KUR_DEF:0 "クルディスタン王国"
  KUR_ADJ:0 "クルディスタン"
