--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -120,3 +120,9 @@
  STATE_1056:0 "コストロマ"
  STATE_1057:0 "ラトガレ"
  STATE_1058:0 "スヴァルキヤ"
+ STATE_1059:0 "スワジランド"
+ STATE_1060:0 "バストランド"
+ STATE_1061:0 "マン島"
+ STATE_1062:0 "南カメルーン"
+ STATE_1063:0 "北カメルーン"
+ STATE_1064:0 "アブハジア"
