--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -271,6 +271,10 @@
  DON_DEF:0 "ドン共和国"
  DON_ADJ:0 "ドン"
  
+ ABK:0 "アブハジア共和国"
+ ABK_DEF:0 "アブハジア共和国"
+ ABK_ADJ:0 "アブハジア"
+ 
  EST:0 "エストニア共和国"
  EST_DEF:0 "エストニア共和国"
  EST_ADJ:0 "エストニア"
@@ -747,6 +751,10 @@
  CLU:0 "ワシントン・コロンビア連盟"
  CLU_DEF:0 "ワシントン・コロンビア連盟"
  CLU_ADJ:0 "ワシントン・コロンビア"
+ 
+ WAS:0 "ワシントン共和国"
+ WAS_DEF:0 "ワシントン共和国"
+ WAS_ADJ:0 "ワシントン"
  
 ##未使用
 #アジア
