州史実化計画

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -61,19 +61,23 @@
  STATE_244:0 "ポルッカラ"
  STATE_245:0 "ミルレロヴォ"
  STATE_247:0 "トヴェリ"
+ STATE_262:0 "ネネツ"
  STATE_264:0 "チフヴィン"
  STATE_286:0 "南中部"
  STATE_357:0 "メイン"
+ STATE_397:0 "コミ"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
  STATE_444:0 "バローチスターン"
  STATE_445:0 "バダフシャーン"
+ STATE_582:0 "ステルリタマク"
  STATE_629:0 "布哇" #ハワイ
  STATE_631:0 "水無月島" #ミッドウェー島
  STATE_632:0 "大鳥島" #ウェーク島
  STATE_638:0 "大宮島" #グアム島
  STATE_646:0 "彩帆" #サイパン
  STATE_650:0 "熱田島" #アッツ島
+ STATE_652:0 "オレンブルク"
  STATE_655:0 "北樺太" #北サハリン
  STATE_671:0 "北中部"
  STATE_722:0 "ペチェンガ"
@@ -81,6 +85,7 @@
  STATE_784:0 "ズーキヤ"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
+ STATE_836:0 "ソリ＝イレツク"
  STATE_990:0 "モスクワ市"
  STATE_1021:0 "アザド・カシミール"
  STATE_1022:0 "ウェストバージニア"
@@ -126,3 +131,4 @@
  STATE_1062:0 "南カメルーン"
  STATE_1063:0 "北カメルーン"
  STATE_1064:0 "アブハジア"
+ STATE_1065:0 "ナーベレジヌイェ・チェルヌイ"
