州史実化計画

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -66,6 +66,7 @@
  STATE_286:0 "南中部"
  STATE_357:0 "メイン"
  STATE_397:0 "コミ"
+ STATE_406:0 "クルサリー"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
  STATE_444:0 "バローチスターン"
@@ -85,6 +86,8 @@
  STATE_784:0 "ズーキヤ"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
+ STATE_834:0 "ジムピティ"
+ STATE_835:0 "アクキスタウ"
  STATE_836:0 "ソリ＝イレツク"
  STATE_990:0 "モスクワ市"
  STATE_1021:0 "アザド・カシミール"
