州史実化計画~ウラルを超えて~

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -71,6 +71,8 @@
  STATE_442:0 "カイバル・パクトゥンクワ"
  STATE_444:0 "バローチスターン"
  STATE_445:0 "バダフシャーン"
+ STATE_572:0 "クルガン"
+ STATE_573:0 "ペルヴォウラルスク"
  STATE_582:0 "ステルリタマク"
  STATE_629:0 "布哇" #ハワイ
  STATE_631:0 "水無月島" #ミッドウェー島
@@ -135,3 +137,4 @@
  STATE_1063:0 "北カメルーン"
  STATE_1064:0 "アブハジア"
  STATE_1065:0 "ナーベレジヌイェ・チェルヌイ"
+ STATE_1066:0 "クングル"
