州史実化計画

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -2,6 +2,7 @@
  STATE_5:0 "ヴァルミア＝マズールィ"
  STATE_11:0 "アウクシュタイティヤ"
  STATE_13:0 "サーレマー島"
+ STATE_40:0 "アルタイ"
  STATE_63:0 "ポメラニア"
  STATE_66:0 "ドルヌィ・シロンスク"
  STATE_67:0 "オポーレ"
@@ -81,6 +82,7 @@
  STATE_646:0 "彩帆" #サイパン
  STATE_650:0 "熱田島" #アッツ島
  STATE_652:0 "オレンブルク"
+ STATE_654:0 "ゴルノ・アルタイ"
  STATE_655:0 "北樺太" #北サハリン
  STATE_671:0 "北中部"
  STATE_722:0 "ペチェンガ"
@@ -138,3 +140,4 @@
  STATE_1064:0 "アブハジア"
  STATE_1065:0 "ナーベレジヌイェ・チェルヌイ"
  STATE_1066:0 "クングル"
+ STATE_1067:0 "ハカス"
