人類補完計画(大嘘)

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -74,6 +74,10 @@
  STATE_445:0 "バダフシャーン"
  STATE_572:0 "クルガン"
  STATE_573:0 "ペルヴォウラルスク"
+ STATE_577:0 "ピチ＝ヤフ"
+ STATE_579:0 "ヤマロ・ネネツ"
+ STATE_580:0 "ハンティ・マンシ"
+ STATE_581:0 "コルグエフ島"
  STATE_582:0 "ステルリタマク"
  STATE_629:0 "布哇" #ハワイ
  STATE_631:0 "水無月島" #ミッドウェー島
@@ -93,6 +97,7 @@
  STATE_834:0 "ジムピティ"
  STATE_835:0 "アクキスタウ"
  STATE_836:0 "ソリ＝イレツク"
+ STATE_909:0 "タス"
  STATE_990:0 "モスクワ市"
  STATE_1021:0 "アザド・カシミール"
  STATE_1022:0 "ウェストバージニア"
