カザフスタン

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -67,6 +67,7 @@
  STATE_286:0 "南中部"
  STATE_357:0 "メイン"
  STATE_397:0 "コミ"
+ STATE_402:0 "アクトベ"
  STATE_406:0 "クルサリー"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
@@ -97,6 +98,9 @@
  STATE_834:0 "ジムピティ"
  STATE_835:0 "アクキスタウ"
  STATE_836:0 "ソリ＝イレツク"
+ STATE_856:0 "ベイノイ"
+ STATE_857:0 "カウキー"
+ STATE_858:0 "シャルダラ"
  STATE_909:0 "タス"
  STATE_990:0 "モスクワ市"
  STATE_1021:0 "アザド・カシミール"
