カザフスタン

--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -68,6 +68,7 @@
  STATE_357:0 "メイン"
  STATE_397:0 "コミ"
  STATE_402:0 "アクトベ"
+ STATE_404:0 "カラガンダ"
  STATE_406:0 "クルサリー"
  STATE_439:0 "ハリヤーナー"
  STATE_442:0 "カイバル・パクトゥンクワ"
@@ -80,6 +81,7 @@
  STATE_580:0 "ハンティ・マンシ"
  STATE_581:0 "コルグエフ島"
  STATE_582:0 "ステルリタマク"
+ STATE_586:0 "アルマトイ"
  STATE_629:0 "布哇" #ハワイ
  STATE_631:0 "水無月島" #ミッドウェー島
  STATE_632:0 "大鳥島" #ウェーク島
@@ -150,3 +152,6 @@
  STATE_1065:0 "ナーベレジヌイェ・チェルヌイ"
  STATE_1066:0 "クングル"
  STATE_1067:0 "ハカス"
+ STATE_1068:0 "クズロルダ"
+ STATE_1069:0 "テュルキスタン"
+ STATE_1070:0 "ジャンブール"
