--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -81,7 +81,11 @@
  STATE_580:0 "ハンティ・マンシ"
  STATE_581:0 "コルグエフ島"
  STATE_582:0 "ステルリタマク"
+ STATE_583:0 "アルカルイク"
  STATE_586:0 "アルマトイ"
+ STATE_588:0 "パブロダール"
+ STATE_589:0 "東カザフスタン"
+ STATE_590:0 "北カザフスタン"
  STATE_629:0 "布哇" #ハワイ
  STATE_631:0 "水無月島" #ミッドウェー島
  STATE_632:0 "大鳥島" #ウェーク島
@@ -100,6 +104,9 @@
  STATE_834:0 "ジムピティ"
  STATE_835:0 "アクキスタウ"
  STATE_836:0 "ソリ＝イレツク"
+ STATE_853:0 "エキバストス"
+ STATE_854:0 "アクモラ"
+ STATE_855:0 "コスタナイ"
  STATE_856:0 "ベイノイ"
  STATE_857:0 "カウキー"
  STATE_858:0 "シャルダラ"
