--- a/localisation/_geacps_loading_tips_l_english.yml
+++ b/localisation/_geacps_loading_tips_l_english.yml
@@ -59,12 +59,12 @@
  LOADING_TIP_57: "我々は海岸で戦う、我々は水際で戦う、我々は野原と街頭で戦う、我々は丘で戦う。我々は決して降伏しない。\n- ウィンストン・チャーチル"
  LOADING_TIP_58: "我ニ追イツク敵機無シ\n- 彩雲の電文"
  LOADING_TIP_59: "一歩も下がるな!\n- ソ連国防人民委員令第227号"
- LOADING_TIP_60: "\n- "
- LOADING_TIP_61: "\n- "
- LOADING_TIP_62: "\n- "
- LOADING_TIP_63: "\n- "
- LOADING_TIP_64: "\n- "
- LOADING_TIP_65: "\n- "
+ LOADING_TIP_60: "皇国ノ興廃此ノ一戦ニ在リ、各員一層奮励努力セヨ\n- 東郷平八郎"
+ LOADING_TIP_61: "英国は各員がその義務を尽くすことを期待する\n- ホレーショ・ネルソン"
+ LOADING_TIP_62: "欲しがりません勝つまでは\n- 戦時標語"
+ LOADING_TIP_63: "ぜいたくは敵だ！\n- 戦時標語"
+ LOADING_TIP_64: "世の中に寛容の形態は3種類存在する。1つは誠実な寛容、1つは不誠実な寛容、そして混沌だ。\n- ベルリン攻防戦中にソ連軍兵士が発見したドイツ兵の手記より"
+ LOADING_TIP_65: "アメリカが何故負けたか？自身を過信していたからさ。\n- ダグラス・マッカーサー"
  LOADING_TIP_66: "\n- "
  LOADING_TIP_67: "\n- "
  LOADING_TIP_68: "\n- "
