--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -103,3 +103,6 @@
  
 #国民精神
  GEACPS_IDEA_JAP_1:0 "大東亞共榮圈"
+ GEACPS_IDEA_JAP_2:0 "参謀本部と軍令部の対立"
+ GEACPS_IDEA_JAP_3:0 "逼迫した財政"
+ GEACPS_IDEA_JAP_4:0 "布哇王国との関係"
