--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -449,10 +449,6 @@
  MON_DEF:0 "モンゴル国"
  MON_ADJ:0 "モンゴル"
  
- MYS:0 "マイソール王国"
- MYS_DEF:0 "マイソール王国"
- MYS_ADJ:0 "マイソール"
- 
  NEP:0 "ネパール王国"
  NEP_DEF:0 "ネパール王国"
  NEP_ADJ:0 "ネパール"
@@ -512,6 +508,15 @@
  YEM:0 "イエメン・ムタワッキリテ王国"
  YEM_DEF:0 "イエメン・ムタワッキリテ王国"
  YEM_ADJ:0 "イエメン"
+ 
+#藩王国(アジア)
+ MYS:0 "マイソール王国"
+ MYS_DEF:0 "マイソール王国"
+ MYS_ADJ:0 "マイソール"
+ 
+ TRV:0 "トラヴァンコール王国"
+ TRV_DEF:0 "トラヴァンコール王国"
+ TRV_ADJ:0 "トラヴァンコール"
  
 #ヨーロッパ
  ADR:0 "アドリア共和国"
