--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -70,7 +70,10 @@
  STATE_402:0 "アクトベ"
  STATE_404:0 "カラガンダ"
  STATE_406:0 "クルサリー"
+ STATE_429:0 "ムンバイ"
+ STATE_437:0 "マディヤ・プラデーシュ"
  STATE_439:0 "ハリヤーナー"
+ STATE_440:0 "ラホール"
  STATE_442:0 "カイバル・パクトゥンクワ"
  STATE_444:0 "バローチスターン"
  STATE_445:0 "バダフシャーン"
@@ -110,6 +113,11 @@
  STATE_856:0 "ベイノイ"
  STATE_857:0 "カウキー"
  STATE_858:0 "シャルダラ"
+ STATE_859:0 "バリパダ"
+ STATE_860:0 "シワン"
+ STATE_862:0 "アラー"
+ STATE_865:0 "チャンディーガル"
+ STATE_866:0 "ナーグプル"
  STATE_909:0 "タス"
  STATE_990:0 "モスクワ市"
  STATE_1021:0 "アザド・カシミール"
@@ -164,3 +172,6 @@
  STATE_1070:0 "ジャンブール"
  STATE_1071:0 "林芝"
  STATE_1072:0 "索"
+ STATE_1073:0 "ヴィシャーカパトナム"
+ STATE_1074:0 "ウッタラーカンド"
+ STATE_1075:0 "ヒマーチャル・プラデーシュ"
