--- a/localisation/_geacps_state_names_l_english.yml
+++ b/localisation/_geacps_state_names_l_english.yml
@@ -71,6 +71,7 @@
  STATE_404:0 "カラガンダ"
  STATE_406:0 "クルサリー"
  STATE_429:0 "ムンバイ"
+ STATE_435:0 "パトナー"
  STATE_437:0 "マディヤ・プラデーシュ"
  STATE_439:0 "ハリヤーナー"
  STATE_440:0 "ラホール"
@@ -104,6 +105,7 @@
  STATE_784:0 "ズーキヤ"
  STATE_787:0 "ギルギット・バルティスタン"
  STATE_797:0 "東京"
+ STATE_823:0 "ダルバンガ"
  STATE_834:0 "ジムピティ"
  STATE_835:0 "アクキスタウ"
  STATE_836:0 "ソリ＝イレツク"
@@ -115,9 +117,11 @@
  STATE_858:0 "シャルダラ"
  STATE_859:0 "バリパダ"
  STATE_860:0 "シワン"
+ STATE_861:0 "ジャールカンド"
  STATE_862:0 "アラー"
  STATE_865:0 "チャンディーガル"
  STATE_866:0 "ナーグプル"
+ STATE_867:0 "キシャンガンジ"
  STATE_909:0 "タス"
  STATE_990:0 "モスクワ市"
  STATE_1021:0 "アザド・カシミール"
