--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -510,9 +510,21 @@
  YEM_ADJ:0 "イエメン"
  
 #藩王国(アジア)
+ BNG:0 "バンガナパッレ王国"
+ BNG_DEF:0 "バンガナパッレ王国"
+ BNG_ADJ:0 "バンガナパッレ"
+ 
+ HYD:0 "ハイダラーバード王国"
+ HYD_DEF:0 "ハイダラーバード王国"
+ HYD_ADJ:0 "ハイダラーバード"
+ 
  MYS:0 "マイソール王国"
  MYS_DEF:0 "マイソール王国"
  MYS_ADJ:0 "マイソール"
+ 
+ PUD:0 "プドゥコーッタイ王国"
+ PUD_DEF:0 "プドゥコーッタイ王国"
+ PUD_ADJ:0 "プドゥコーッタイ"
  
  TRV:0 "トラヴァンコール王国"
  TRV_DEF:0 "トラヴァンコール王国"
