エラー除去とイベントの削除
・ユニットエラーを除去
・メインメニューの変更
・イベントを削除

--- a/localisation/geacps_CHI_l_english.yml
+++ b/localisation/geacps_CHI_l_english.yml
@@ -61,17 +61,8 @@
 
  GEACPS_china.007.title:0 "落日の中華"
  GEACPS_china.007.desc:0 "先日の分裂ののち、今度は中央政府内で我々に対しクーデターを起こす勢力が現れた。"
- GEACPS_china.007.a:0 "やめてくれよ！"
+ GEACPS_china.007.a:0 "これどうすればいいんですか…？"
 
- GEACPS_china.008.title:0 "奪われた土地の奪還"
- GEACPS_china.008.desc:0 "中国がごたごたになってるうちに領土を奪い返すべきとの世論の動きが出てきたよ"
- GEACPS_china.008.a:0 "取り返せ！"
- GEACPS_china.008.b:0 "我らは常に平和的解決を望む"
-
- GEACPS_china.009.title:0 "奪われた土地の奪還"
- GEACPS_china.009.desc:0 "チベットが我々の土地へ進駐した！今やカンゼは彼らが実効支配している。"
- GEACPS_china.009.b:0 "カンゼを完全に取られたってか？ハハ…"
- GEACPS_china.009.a:0 "取り返せ！"
 
  GEACPS_china.010.title:0 "講和の提案"
  GEACPS_china.010.desc:0 "結局のところ[ROOT.GetName]は周辺を敵国に囲まれ、このままの状態では戦争に勝利するどころか独立を保つことすら厳しい状況であるといえる。既に離反した国々も日本からの支援が既に始まっているとの知らせも聞かれるようになっている。中央政府の多くの人間はこの絶望的な状況をどう見ているのであろうか…。"
