--- a/localisation/geacps_USA_l_english.yml
+++ b/localisation/geacps_USA_l_english.yml
@@ -1,115 +1,80 @@
 ﻿l_english: 
-USA_RzfSOMPY:0 "ソビエト連邦との提携"
-USA_RzfSOMPY_desc:0 ""
-USA_iCOZdoTN:0 "平等の連邦"
-USA_iCOZdoTN_desc:0 ""
-USA_aOdgBkCb:0 "議会の解体"
-USA_aOdgBkCb_desc:0 ""
-USA_ZiFJnaVc:0 "労働者共和国と提携"
-USA_ZiFJnaVc_desc:0 ""
-USA_LSqTznfR:0 "白銀軍団と接触"
-USA_LSqTznfR_desc:0 ""
-USA_eUfDPzoQ:0 "古の栄光"
-USA_eUfDPzoQ_desc:0 ""
-USA_wVTISvsj:0 "奴隷法"
-USA_wVTISvsj_desc:0 ""
-USA_WjKwouzY:0 "国家安定法"
-USA_WjKwouzY_desc:0 ""
-USA_HwiLlkhA:0 "私有財産制限法"
-USA_HwiLlkhA_desc:0 ""
-USA_VXGNnzZu:0 "国家治安維持法"
-USA_VXGNnzZu_desc:0 ""
-USA_dqepoyit:0 "徹底抗戦"
-USA_dqepoyit_desc:0 ""
-USA_lGJhqKPf:0 "アメリカ連合帝国"
-USA_lGJhqKPf_desc:0 ""
-USA_NlbRYUEd:0 "連邦政府の復古"
-USA_NlbRYUEd_desc:0 ""
-USA_HFazQAIW:0 "アメリカ人民連邦"
-USA_HFazQAIW_desc:0 ""
-USA_1947:0 "1947年臨時大統領選挙"
-USA_1947_desc:0 ""
-USA_OejvawPQ:0 "強靭な政府"
-USA_OejvawPQ_desc:0 ""
-USA_bvKoadnG:0 "革命の炎"
-USA_bvKoadnG_desc:0 ""
-USA_CXJziVhT:0 "民族主義者を弾圧"
-USA_CXJziVhT_desc:0 ""
-USA_qghYIBjD:0 "シカゴ会議"
-USA_qghYIBjD_desc:0 ""
-USA_kLlSBnbI:0 "軍事経済の推進"
-USA_kLlSBnbI_desc:0 ""
-USA_BMSapuJg:0 "国立大学への支援"
-USA_BMSapuJg_desc:0 ""
-USA_vtGlJneA:0 "国家経済管理局の設立"
-USA_vtGlJneA_desc:0 ""
-USA_uDsnFOVY:0 "大陸縦断鉄道の建設"
-USA_uDsnFOVY_desc:0 ""
-USA_ii:0 "大陸縦断鉄道の建設II"
-USA_ii_desc:0 ""
-USA_iii:0 "大陸縦断鉄道の建設III"
-USA_iii_desc:0 ""
-USA_FxbWLAsD:0 "軍事中心経済"
-USA_FxbWLAsD_desc:0 ""
-USA_kdobhHcX:0 "民間経済の復興"
-USA_kdobhHcX_desc:0 ""
-USA_MVuUBvEG:0 "国債の大量発行を開始"
-USA_MVuUBvEG_desc:0 ""
-USA_EWpSHFkf:0 "外国企業の資産を押収"
-USA_EWpSHFkf_desc:0 ""
-USA_gICLJrTX:0 "ベーシックインカム"
-USA_gICLJrTX_desc:0 ""
-USA_WtVDwAKF:0 "第三次インディアン移住法"
-USA_WtVDwAKF_desc:0 ""
-USA_GgPXYAsS:0 "インディアン特例法"
-USA_GgPXYAsS_desc:0 ""
-USA_QogwtczN:0 "株式市場の２４時間運用"
-USA_QogwtczN_desc:0 ""
-USA_whWHNDpP:0 "ワシントンを復興"
-USA_whWHNDpP_desc:0 ""
-USA_lAsKGdju:0 "資源管理法"
-USA_lAsKGdju_desc:0 ""
-USA_YPTdZslq:0 "教育投資"
-USA_YPTdZslq_desc:0 ""
-USA_eAJWbFoY:0 "新首都"
-USA_eAJWbFoY_desc:0 ""
-USA_HBkscPVe:0 "建築設計を共通化"
-USA_HBkscPVe_desc:0 ""
-USA_egSTWAkZ:0 "整備された町並み"
-USA_egSTWAkZ_desc:0 ""
-USA_tCmWAGjr:0 "投資家を歓迎"
-USA_tCmWAGjr_desc:0 ""
-USA_soDGTdxH:0 "復興庁を設立"
-USA_soDGTdxH_desc:0 ""
-USA_xBeNSKzy:0 "世界の工場"
-USA_xBeNSKzy_desc:0 ""
-USA_rmOLVhsT:0 "奨学金制度の拡充"
-USA_rmOLVhsT_desc:0 ""
-USA_BNbXTelt:0 "失地の回復"
-USA_BNbXTelt_desc:0 ""
-USA_AVHdgrxK:0 "大粛清"
-USA_AVHdgrxK_desc:0 ""
-USA_RYMgqcDw:0 "シカゴ会議"
-USA_RYMgqcDw_desc:0 ""
-USA_GiSLDczq:0 "テキサス併合"
-USA_GiSLDczq_desc:0 ""
-USA_LoESXhPw:0 "武力行使"
-USA_LoESXhPw_desc:0 ""
-USA_gQWFIwAe:0 "アメリカ再統一"
-USA_gQWFIwAe_desc:0 ""
-USA_jHMIRUch:0 "主権を尊重"
-USA_jHMIRUch_desc:0 ""
-USA_xwvVsjQr:0 "一つの国家"
-USA_xwvVsjQr_desc:0 ""
-USA_dBtzPlbC:0 "全体主義を禁止"
-USA_dBtzPlbC_desc:0 ""
-USA_nlILtqwR:0 "外交的解決"
-USA_nlILtqwR_desc:0 ""
-USA_SVhaecyr:0 "軍事侵攻"
-USA_SVhaecyr_desc:0 ""
-USA_SFUGjfsr:0 "コミンフォルムへ加盟"
-USA_SFUGjfsr_desc:0 ""
-USA_LXbpviJl:0 "第５インターナショナル"
-USA_LXbpviJl_desc:0 ""
-USA_LfkhOsvV:0 "革命を伝搬"
-USA_LfkhOsvV_desc:0 ""
+
+ ###ideas
+ USA_sour_loser:0 "苦い敗北"
+ USA_sour_loser_desc:0 ""
+ USA_failed_new_deal:0 "ニューディールの失敗"
+ USA_failed_new_deal_desc:0 ""
+ USA_war_debt:0 "戦争負債償還"
+ USA_war_debt_desc:0 ""
+ USA_war_indemnity:0 "戦争賠償金"
+ USA_war_indemnity_desc:0 ""
+ USA_spread_dissatisfaction:0 "広がる不満"
+ USA_spread_dissatisfaction_desc:0 ""
+
+ ###Events
+ USA_ACW.0.t:0 "崩れるアメリカ"
+ USA_ACW.0.desc:0 "REPLACE_ME"
+ USA_ACW.0.a:0 "Happy New Year!"
+ USA_ACW.1.t:0 "新年ゼネスト"
+ USA_ACW.1.desc:0 "REPLACE_ME"
+ USA_ACW.1.a:0 "ストをすぐ中止させろ！"
+ USA_suppression_tt:0 "§R労働者の怒りを引き起こします。§!"
+ USA_ACW.1.b:0 "交渉を始めろ"
+ USA_negotiation_tt:0 "§G交渉が始まります。§!"
+ USA_ACW.2.t:0 "デモ"
+ USA_ACW.2.desc:0 "REPLACE_ME"
+ USA_ACW.2.a:0 "おかしくなりそうだ！"
+ USA_create_resistance_tt:0 "§R市民の怒りが政府に向けられています。§!"
+ USA_ACW.3.t:0 "交渉の開始"
+ USA_ACW.3.desc:0 "REPLACE_ME"
+ USA_ACW.3.a:0 "良い結果が出ることを期待しよう"
+ USA_ACW.4.t:0 "アイザック·ウッダード事件"
+ USA_ACW.4.desc:0 "この人は軍人です。除隊して復帰する途中、警察官に暴行を受けて失明しました。"
+ USA_ACW.4.a:0 "交渉に支障があってはならないのに..."
+ USA_ACW.4.b:0 "当然のことをしたのだ！"
+ USA_ACW.5.t:0 "警察とデモ隊の衝突"
+ USA_ACW.5.desc:0 "REPLACE_ME"
+ USA_ACW.5.a:0 "また...？"
+ USA_ACW.6.t:0 "暴力的なデモ"
+ USA_ACW.6.desc:0 "REPLACE_ME"
+ USA_ACW.6.a:0 "オーマイガー！"
+ USA_ACW.7.t:0 "共産主義の台頭"
+ USA_ACW.7.desc:0 "REPLACE_ME"
+ USA_ACW.7.a:0 "赤？"
+ USA_ACW.8.t:0 "赤色恐怖の拡散"
+ USA_ACW.8.desc:0 "REPLACE_ME"
+ USA_ACW.8.a:0 "州兵を配置しろ！"
+ USA_ACW.8.b:0 "警察力で対応しろ！"
+ USA_ACW.9.t:0 "偶発的な射撃"
+ USA_ACW.9.desc:0 "REPLACE_ME"
+ USA_ACW.9.a:0 "そんな命令は下したことがない！"
+ USA_ACW.10.t:0 "統制不能"
+ USA_ACW.10.desc:0 "REPLACE_ME"
+ USA_ACW.10.a:0 "ちくしょう..."
+ USA_ACW.11.t:0 "同調する知事たち"
+ USA_ACW.11.desc:0 "REPLACE_ME"
+ USA_ACW.11.a:0 "州兵を配置しろ！"
+ USA_ACW.11.b:0 "兵力を増員しろ！"
+ USA_ACW.12.t:0 "配置拒否"
+ USA_ACW.12.desc:0 "REPLACE_ME"
+ USA_ACW.12.a:0 "反逆だ！"
+ USA_ACW.13.t:0 "襲われた武器庫"
+ USA_ACW.13.desc:0 "REPLACE_ME"
+ USA_ACW.13.a:0 "めちゃくちゃだ"
+ USA_ACW.14.t:0 "シカゴ宣言"
+ USA_ACW.14.desc:0 ""
+ USA_ACW.14.a:0 "合衆国を守護せよ！"
+ USA_ACW.14.b:0 "万国の労働者よ団結せよ！"
+ USA_ACW.15.t:0 "兵力解散命令"
+ USA_ACW.15.desc:0 "REPLACE_ME"
+ USA_ACW.15.a:0 "行かせろ"
+ USA_ACW.16.t:0 "兵力解散命令"
+ USA_ACW.16.desc:0 "for AWR"
+ USA_ACW.16.a:0 "君のためのプレゼントだよ。"
+ USA_ACW.16.b:0 "笑わせる話だ"
+ USA_ACW.17.t:0 "拒否"
+ USA_ACW.17.desc:0 "REPLACE_ME"
+ USA_ACW.17.a:0 "反逆だ！ あいつらを倒せ！"
+ 
+ ###focuses
