--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -425,10 +425,6 @@
  IRQ_DEF:0 "イラク王国"
  IRQ_ADJ:0 "イラク"
  
- CCS:0 "ザカフカース民主連邦共和国"
- CCS_DEF:0 "ザカフカース民主連邦共和国"
- CCS_ADJ:0 "ザカフカース"
- 
  ISR:0 "イスラエル国"
  ISR_DEF:0 "イスラエル国"
  ISR_ADJ:0 "イスラエル"
@@ -456,6 +452,10 @@
  OMA:0 "マスカット・オマーン土侯国"
  OMA_DEF:0 "マスカット・オマーン土侯国"
  OMA_ADJ:0 "オマーン"
+ 
+ ORI:0 "オリッサ共和国"
+ ORI_DEF:0 "オリッサ共和国"
+ ORI_ADJ:0 "オリッサ"
  
  PAL:0 "パレスチナ国"
  PAL_DEF:0 "パレスチナ国"
@@ -510,6 +510,10 @@
  YEM_ADJ:0 "イエメン"
  
 #藩王国(アジア)
+ BNG:0 "バルーチスターン王国"
+ BNG_DEF:0 "バルーチスターン王国"
+ BNG_ADJ:0 "バルーチスターン"
+ 
  BNG:0 "バンガナパッレ王国"
  BNG_DEF:0 "バンガナパッレ王国"
  BNG_ADJ:0 "バンガナパッレ"
@@ -529,6 +533,19 @@
  TRV:0 "トラヴァンコール王国"
  TRV_DEF:0 "トラヴァンコール王国"
  TRV_ADJ:0 "トラヴァンコール"
+ 
+ TRV:0 "諸藩連邦"
+ TRV_DEF:0 "諸藩連邦"
+ TRV_ADJ:0 "諸藩連邦"
+ 
+#中東
+ CCS:0 "ザカフカース民主連邦共和国"
+ CCS_DEF:0 "ザカフカース民主連邦共和国"
+ CCS_ADJ:0 "ザカフカース"
+ 
+ MOU:0 "山岳共和国"
+ MOU_DEF:0 "山岳共和国"
+ MOU_ADJ:0 "山岳"
  
 #ヨーロッパ
  ADR:0 "アドリア共和国"
