--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -510,9 +510,9 @@
  YEM_ADJ:0 "イエメン"
  
 #藩王国(アジア)
- BNG:0 "バルーチスターン王国"
- BNG_DEF:0 "バルーチスターン王国"
- BNG_ADJ:0 "バルーチスターン"
+ BAL:0 "バルーチスターン王国"
+ BAL_DEF:0 "バルーチスターン王国"
+ BAL_ADJ:0 "バルーチスターン"
  
  BNG:0 "バンガナパッレ王国"
  BNG_DEF:0 "バンガナパッレ王国"
@@ -534,9 +534,9 @@
  TRV_DEF:0 "トラヴァンコール王国"
  TRV_ADJ:0 "トラヴァンコール"
  
- TRV:0 "諸藩連邦"
- TRV_DEF:0 "諸藩連邦"
- TRV_ADJ:0 "諸藩連邦"
+ VPS:0 "諸藩連邦"
+ VPS_DEF:0 "諸藩連邦"
+ VPS_ADJ:0 "諸藩連邦"
  
 #中東
  CCS:0 "ザカフカース民主連邦共和国"
