--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -111,6 +111,11 @@
  ZHI_warlord_DEF:0 "直隷派"
  ZHI_warlord_ADJ:0 "直隷派"
  
+#藩王国
+ BAL_RAJ:0 "バルーチスターン藩王国"
+ BAL_RAJ_DEF:0 "バルーチスターン藩王国"
+ BAL_RAJ_ADJ:0 "バルーチスターン"
+ 
 #ユーゴスラビア
  BOS_YUG:0 "ボスニア公国"
  BOS_YUG_DEF:0 "ボスニア公国"
