軍事関係記入開始

--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -100,6 +100,10 @@
  GEACPS_NF_JAP_98:0 ""
  GEACPS_NF_JAP_99:0 ""
  GEACPS_NF_JAP_100:0 ""
+ GEACPS_NF_JAP_army_00:0 "軍部の統一"
+ GEACPS_NF_JAP_navy_01:0 "海軍予算の調達"
+ GEACPS_NF_JAP_navy_02:0 "超大和型の建造"
+ 
  
 #国民精神
  GEACPS_IDEA_JAP_1:0 "大東亞共榮圈"
