--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -112,8 +112,8 @@
  GEACPS_NF_JAP_navy_09:0 "戦艦の建造ノウハウ"
  GEACPS_NF_JAP_navy_10:0 "旧式戦艦の代替"
  GEACPS_NF_JAP_navy_11:0 "装甲空母の発展"
- GEACPS_NF_JAP_navy_12:0 "大東亜を護る最強の盾"
- GEACPS_NF_JAP_navy_13:0
+ GEACPS_NF_JAP_navy_12:0 "西太平洋を護る最強の盾"
+ GEACPS_NF_JAP_navy_13:0 
  
 #国民精神
  GEACPS_IDEA_JAP_1:0 "大東亞共榮圈"
