--- a/localisation/geacps_SIC_l_english.yml
+++ b/localisation/geacps_SIC_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
+
 #国家方針
+
  SIC_Taranto_Bay_Redevelopment:0"タラント湾の再開発"
  SIC_Taranto_Bay_Redevelopment_desc:0""
  SIC_Helping_the_Unemployed_in_Calabria:0"カラブリアの失業者を救済"
@@ -12,3 +14,38 @@
  SIC_Port_of_Palermo_Redevelopment_desc:0""
  SIC_Tighter_control:0"取締りの強化"
  SIC_Tighter_control_desc:0""
+ SIC_Overcrowding_in_Naples:0"ナポリの過密対策"
+ SIC_Overcrowding_in_Naples_desc:0""
+ SIC_Industrialization_in_Sicily:0"シチリアにおける工業化"
+ SIC_Industrialization_in_Sicily_desc:0""
+ SIC_Thorough_vocational_training:0"職業訓練の徹底"
+ SIC_Thorough_vocational_training_desc:0""
+ SIC_Industrial_Planning_in_Both_Sicilies:0"両シチリアの産業計画"
+ SIC_Industrial_Planning_in_Both_Sicilies_desc:0""
+ SIC_Outstrada_Operation:0"アウトストラーダの拡大"
+ SIC_Outstrada_Operation_desc:0""
+ SIC_A_New_Road:0"新たな道"
+ SIC_A_New_Road_desc:0""
+ SIC_Benefits_to_the_unemployed:0"失業者への給付"
+ SIC_Benefits_to_the_unemployed_desc:0""
+ SIC_Adoption_of_planned_economy:0"計画経済の採用"
+ SIC_Adoption_of_planned_economy_desc:0""
+ SIC_Issuance_of_proprietary_currency:0"独自通貨の発行"
+ SIC_Issuance_of_proprietary_currency_desc:0""
+ SIC_Perfect_Trinacria:0"完璧なトリナクリア"
+ SIC_Perfect_Trinacria_desc:0""
+ SIC_Free_Market_Development:0"自由市場の開拓"
+ SIC_Free_Market_Development_desc:0""
+ SIC_Support_for_companies:0"企業への支援"
+ SIC_Support_for_companies_desc:0""
+ SIC_Mediation_for_veterans:0"退役軍人への斡旋"
+ SIC_Mediation_for_veterans_desc:0""
+ SIC_Focus_on_shipbuilding:0"造船業への支援"
+ SIC_Focus_on_shipbuilding_desc:0""
+ SIC_Mediterranean_trade_pact:0"地中海貿易条約"
+ SIC_Mediterranean_trade_pact_desc:0""
+#国民精神
+#ツールチップ
+#閣僚
+#特性
+#イベント
