Is it true? But he begins.

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -347,6 +347,10 @@
  ROM_total_socialism_DEF:0 "ルーマニア社会主義共和国"
  ROM_ADJ:0 "ルーマニア"
  
+ YNN:0 "ヤマロ・ネネツ共和国"
+ YNN_DEF:0 "ヤマロ・ネネツ共和国"
+ YNN_ADJ:0 "ヤマロ・ネネツ"
+ 
 #中華諸国
  CHI:0 "中華民国"
  CHI_DEF:0 "中華民国"
@@ -412,6 +416,10 @@
  AFG:0 "アフガニスタン王国"
  AFG_DEF:0 "アフガニスタン王国"
  AFG_ADJ:0 "アフガニスタン"
+ 
+ AKM:0 "アクモラ共和国"
+ AKM_DEF:0 "アクモラ共和国"
+ AKM_ADJ:0 "アクモラ"
  
  BHR:0 "ブハラ共和国"
  BHR_DEF:0 "ブハラ共和国"
