--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -311,38 +311,117 @@
  STATE_907:0 ""
  STATE_908:0 ""
  STATE_909:0 "タス"
- 
+ STATE_910:0 ""
+ STATE_911:0 ""
+ STATE_912:0 ""
+ STATE_913:0 ""
+ STATE_914:0 ""
+ STATE_915:0 ""
+ STATE_916:0 ""
+ STATE_917:0 ""
+ STATE_918:0 ""
+ STATE_919:0 ""
+ STATE_920:0 ""
+ STATE_921:0 ""
+ STATE_922:0 ""
+ STATE_923:0 ""
+ STATE_924:0 ""
+ STATE_925:0 ""
+ STATE_926:0 ""
+ STATE_927:0 ""
+ STATE_928:0 ""
+ STATE_929:0 ""
+ STATE_930:0 ""
+ STATE_931:0 ""
+ STATE_932:0 ""
+ STATE_933:0 ""
+ STATE_934:0 ""
+ STATE_935:0 ""
+ STATE_936:0 ""
+ STATE_937:0 ""
+ STATE_938:0 ""
+ STATE_939:0 ""
+ STATE_940:0 ""
+ STATE_941:0 ""
+ STATE_942:0 ""
+ STATE_943:0 ""
+ STATE_944:0 ""
+ STATE_945:0 ""
+ STATE_946:0 ""
+ STATE_947:0 ""
+ STATE_948:0 ""
+ STATE_949:0 ""
+ STATE_950:0 ""
+ STATE_951:0 ""
+ STATE_952:0 ""
+ STATE_953:0 ""
+ STATE_954:0 ""
+ STATE_955:0 ""
+ STATE_956:0 ""
+ STATE_957:0 ""
+ STATE_958:0 ""
+ STATE_959:0 ""
+ STATE_960:0 ""
+ STATE_961:0 ""
+ STATE_962:0 ""
+ STATE_963:0 ""
+ STATE_964:0 ""
+ STATE_965:0 ""
+ STATE_966:0 ""
+ STATE_967:0 ""
+ STATE_968:0 ""
+ STATE_969:0 ""
+ STATE_970:0 ""
+ STATE_971:0 ""
+ STATE_972:0 ""
+ STATE_973:0 ""
+ STATE_974:0 ""
+ STATE_975:0 ""
+ STATE_976:0 ""
+ STATE_977:0 ""
+ STATE_978:0 ""
+ STATE_979:0 ""
+ STATE_980:0 ""
+ STATE_981:0 ""
+ STATE_982:0 ""
+ STATE_983:0 ""
+ STATE_984:0 ""
+ STATE_985:0 ""
+ STATE_986:0 ""
+ STATE_987:0 ""
+ STATE_988:0 ""
+ STATE_989:0 ""
  STATE_990:0 "モスクワ市"
- STATE_991:0 ""
- STATE_992:0 ""
- STATE_993:0 ""
- STATE_994:0 ""
- STATE_995:0 ""
- STATE_996:0 ""
- STATE_997:0 ""
- STATE_998:0 ""
- STATE_999:0 ""
- STATE_1000:0 ""
- STATE_1001:0 ""
- STATE_1002:0 ""
- STATE_1003:0 ""
- STATE_1004:0 ""
- STATE_1005:0 ""
- STATE_1006:0 ""
- STATE_1007:0 ""
- STATE_1008:0 ""
- STATE_1009:0 ""
- STATE_1010:0 ""
- STATE_1011:0 ""
- STATE_1012:0 ""
- STATE_1013:0 ""
- STATE_1014:0 ""
- STATE_1015:0 ""
- STATE_1016:0 ""
- STATE_1017:0 ""
- STATE_1018:0 ""
- STATE_1019:0 ""
- STATE_1020:0 ""
+ STATE_991:0 "西ベルリン"
+ STATE_992:0 "東ベルリン"
+ STATE_993:0 "ローマ"
+ STATE_994:0 "宇都宮"
+ STATE_995:0 "長野"
+ STATE_996:0 "西ギリシャ"
+ STATE_997:0 "テッサリア"
+ STATE_998:0 "アッティカ"
+ STATE_999:0 "オート＝ノルマンディー"
+ STATE_1000:0 "オーバーフランケン"
+ STATE_1001:0 "ウンターフランケン"
+ STATE_1002:0 "フォアアールベルク"
+ STATE_1003:0 "東チロル"
+ STATE_1004:0 "ザルツブルク"
+ STATE_1005:0 "ケルンテン"
+ STATE_1006:0 "ブルゲンラント"
+ STATE_1007:0 "シュタイアーマルク"
+ STATE_1008:0 "海東"
+ STATE_1009:0 "黄南"
+ STATE_1010:0 "西寧"
+ STATE_1011:0 "海北"
+ STATE_1012:0 "海南"
+ STATE_1013:0 "雅安"
+ STATE_1014:0 "重慶"
+ STATE_1015:0 "興安北"
+ STATE_1016:0 "錦州"
+ STATE_1017:0 "嫩江"
+ STATE_1018:0 "合江"
+ STATE_1019:0 "安東"
+ STATE_1020:0 "ケーララ"
  STATE_1021:0 "アザド・カシミール"
  STATE_1022:0 "ウェストバージニア"
  STATE_1023:0 "バーモント"
