--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -1,5 +1,14 @@
 ﻿l_english:
+#主要国首都
+ VICTORY_POINTS_1182:0 "東京"
+ VICTORY_POINTS_11506:0 "パリ"
+ VICTORY_POINTS_6103:0 "ロンドン"
+ VICTORY_POINTS_3957:0 "コロンビア特別区"
+ VICTORY_POINTS_6380:0 "モスクワ"
  VICTORY_POINTS_6521:0 "西ベルリン"
+ VICTORY_POINTS_13238:0 "東ベルリン"
+ VICTORY_POINTS_9904:0 "ローマ"
+
  VICTORY_POINTS_692:0 "ミュンヘン"
  VICTORY_POINTS_6469:0 "エッセン"
  VICTORY_POINTS_9347:0 "ハンブルク"
@@ -52,7 +61,6 @@
  VICTORY_POINTS_6598:0 "アントワープ"
  VICTORY_POINTS_11519:0 "リエージュ"
  VICTORY_POINTS_6583:0 "ルクセンブルク"
- VICTORY_POINTS_11506:0 "パリ"
  VICTORY_POINTS_6613:0 "リヨン"
  VICTORY_POINTS_9737:0 "ボルドー"
  VICTORY_POINTS_11834:0 "マルセイユ"
@@ -127,7 +135,6 @@
  VICTORY_POINTS_4135:0 "ジブラルタル"
  VICTORY_POINTS_11805:0 "リスボン"
  VICTORY_POINTS_9817:0 "ポルト"
- VICTORY_POINTS_9904:0 "ローマ"
  VICTORY_POINTS_3780:0 "ミラノ"
  VICTORY_POINTS_819:0 "ナポリ"
  VICTORY_POINTS_6626:0 "トリエステ"
@@ -159,7 +166,6 @@
  VICTORY_POINTS_310:0 "ダウガフピルス"
  VICTORY_POINTS_6296:0 "カウナス"
  VICTORY_POINTS_9483:1 "シャウレイ"
- VICTORY_POINTS_6103:0 "ロンドン"
  VICTORY_POINTS_3273:0 "グラスゴー"
  VICTORY_POINTS_9297:0 "バーミンガム"
  VICTORY_POINTS_351:0 "ニューカッスル"
@@ -170,7 +176,6 @@
  VICTORY_POINTS_9392:0 "エディンバラ"
  VICTORY_POINTS_11293:0 "ダブリン"
  VICTORY_POINTS_7394:0 "コーク"
- VICTORY_POINTS_6380:0 "モスクワ"
  VICTORY_POINTS_525:0 "キエフ"
  VICTORY_POINTS_3529:0 "スターリングラード"
  VICTORY_POINTS_3151:0 "レニングラード"
@@ -268,7 +273,6 @@
  VICTORY_POINTS_10438:0 "ナコーンラーチャシーマー"
  VICTORY_POINTS_4075:0 "ハノイ"
  VICTORY_POINTS_4401:0 "サイゴン"
- VICTORY_POINTS_1182:0 "東京"
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_1025:0 "小倉"
  VICTORY_POINTS_1092:0 "広島"
@@ -346,7 +350,6 @@
  VICTORY_POINTS_10913:0 "ケルマーン"
  VICTORY_POINTS_10737:0 "カーブル"
  VICTORY_POINTS_4893:0 "ヘラート"
- VICTORY_POINTS_3957:0 "ワシントン"
  VICTORY_POINTS_3878:0 "ニューヨーク"
  VICTORY_POINTS_9450:0 "シカゴ"
  VICTORY_POINTS_9814:0 "ロサンゼルス"
@@ -908,3 +911,17 @@
  VICTORY_POINTS_13236:0 "東ベルリン"
  VICTORY_POINTS_12641:0 "チタ"
  VICTORY_POINTS_13239:0 "ヘルシンキ"
+ VICTORY_POINTS_11560:0 "マインツ"
+ VICTORY_POINTS_611:0 "アオスタ"
+ VICTORY_POINTS_11105:0 "ポルッカラ"
+ VICTORY_POINTS_11617:0 "スフミ"
+ VICTORY_POINTS_1684:0 "サレハルト"
+ VICTORY_POINTS_12288:0 "スバイリエン"
+ VICTORY_POINTS_10116:0 "ブバネーシュワル"
+ VICTORY_POINTS_4414:0 "アナンタプル"
+ VICTORY_POINTS_1321:0 "ティルヴァナンタプラム"
+ VICTORY_POINTS_10149:0 "ポンディシェリ"
+ VICTORY_POINTS_7900:0 "ムババネ"
+ VICTORY_POINTS_4556:0 "マセル"
+ VICTORY_POINTS_6039:0 "ブエア"
+ VICTORY_POINTS_13014:0 "プライア"
