--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -925,3 +925,5 @@
  VICTORY_POINTS_4556:0 "マセル"
  VICTORY_POINTS_6039:0 "ブエア"
  VICTORY_POINTS_13014:0 "プライア"
+ VICTORY_POINTS_12505:0 "セント・ジョンズ"
+ VICTORY_POINTS_373:0 "サン＝ピエール"
