ヌルヌルヌルヌルヌルヌルヌルヌル

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -927,3 +927,4 @@
  VICTORY_POINTS_13014:0 "プライア"
  VICTORY_POINTS_12505:0 "セント・ジョンズ"
  VICTORY_POINTS_373:0 "サン＝ピエール"
+ VICTORY_POINTS_10239:0 "アクモリンスク"
