life and knowledge...?

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -477,3 +477,5 @@
  STATE_1073:0 "ヴィシャーカパトナム"
  STATE_1074:0 "ウッタラーカンド"
  STATE_1075:0 "ヒマーチャル・プラデーシュ"
+ STATE_1076:0 "アーディラーバード"
+ STATE_1077:0 "ジャグダルプル"
