--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -116,6 +116,10 @@
  BAL_RAJ_DEF:0 "バルーチスターン藩王国"
  BAL_RAJ_ADJ:0 "バルーチスターン"
  
+ JAK_RAJ:0 "ジャンムー・カシュミール藩王国"
+ JAK_RAJ_DEF:0 "ジャンムー・カシュミール藩王国"
+ JAK_RAJ_ADJ:0 "ジャンムー・カシュミール"
+ 
 #ユーゴスラビア
  BOS_YUG:0 "ボスニア公国"
  BOS_YUG_DEF:0 "ボスニア公国"
