--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -530,6 +530,10 @@
  HYD_DEF:0 "ハイダラーバード王国"
  HYD_ADJ:0 "ハイダラーバード"
  
+ JAK:0 "ジャンムー・カシュミール王国"
+ JAK_DEF:0 "ジャンムー・カシュミール王国"
+ JAK_ADJ:0 "ジャンムー・カシュミール"
+ 
  MYS:0 "マイソール王国"
  MYS_DEF:0 "マイソール王国"
  MYS_ADJ:0 "マイソール"
@@ -550,6 +554,10 @@
  CCS:0 "ザカフカース民主連邦共和国"
  CCS_DEF:0 "ザカフカース民主連邦共和国"
  CCS_ADJ:0 "ザカフカース"
+ 
+ MAH:0 "マハバード共和国"
+ MAH_DEF:0 "マハバード共和国"
+ MAH_ADJ:0 "マハバード"
  
  MOU:0 "山岳共和国"
  MOU_DEF:0 "山岳共和国"
