<< Under confirmation >> If there is no problem, it is expected to pass.

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -928,3 +928,4 @@
  VICTORY_POINTS_12505:0 "セント・ジョンズ"
  VICTORY_POINTS_373:0 "サン＝ピエール"
  VICTORY_POINTS_10239:0 "アクモリンスク"
+ VICTORY_POINTS_12754:0 "ジャンムー"
