アイコンを一部設定

--- a/localisation/geacps_SIC_l_english.yml
+++ b/localisation/geacps_SIC_l_english.yml
@@ -44,8 +44,19 @@
  SIC_Focus_on_shipbuilding_desc:0""
  SIC_Mediterranean_trade_pact:0"地中海貿易条約"
  SIC_Mediterranean_trade_pact_desc:0""
+ SIC_Reconstruction_of_Two_Sicilian_Navies:0"両シチリア海軍の再構築"
+ SIC_Reconstruction_of_Two_Sicilian_Navies_desc:0""
+ SIC_Expansion_of_shipbuilding_industry:0"造船業の拡大"
+ SIC_Expansion_of_shipbuilding_industry_desc:0""
+ SIC_Construction_of_Strait_Fortress:0"海峡要塞建設"
+ SIC_Construction_of_Strait_Fortress_desc:0""
+ SIC_Expansion_of_Army_Division:0"陸軍師団の拡張"
+ SIC_Expansion_of_Army_Division_desc:0""
+ SIC_Improving_the_situation_of_the_division:0"師団の状況を改善"
+ SIC_Improving_the_situation_of_the_division_desc:0""
 #国民精神
 #ツールチップ
 #閣僚
 #特性
 #イベント
+#flags
